--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "D": "1.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-google-charts": "^4.0.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
